--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,8 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-GlobalDefaultGameMode=/Script/TPSExample.CGameMode_TPS
+GlobalDefaultGameMode=/Game/PJS/Blueprints/BP_CGameMode_TPS.BP_CGameMode_TPS_C
+EditorStartupMap=/Game/PJS/Maps/Lv.Lv
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
